openshift/config/service-openshift.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catapp
  name: catapp
spec:
  # This Service is exposed by an OpenShift Route
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: catapp
