openshift/config/route-openshift.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: catapp
  name: catapp
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: catapp
    weight: 100
